--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="/dist/styles.css">
   <title>Aaron Shivers - Portfolio</title>
 </head>
 <body>
